fix demo.cpp compilation

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -3,7 +3,7 @@ CCWRAP=$(TRACES_ROOT_DIR)/ccwrap.py
 LDWRAP=$(TRACES_ROOT_DIR)/ldwrap.py
 CC=$(CCWRAP) gcc
 CXX=$(CCWRAP) g++
-CXXFLAGS=-I..
+CXXFLAGS=-I../include
 LD=$(LDWRAP) ld
 LDFLAGS=-L$(TRACES_ROOT_DIR)
 all: demo
