initial commit of make files
Add ARM/Android support

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -8,8 +8,10 @@ LD=$(LDWRAP) ld
 LDFLAGS=-L$(TRACES_ROOT_DIR)
 all: demo
 
-demo: demo.o
-	$(CCWRAP) g++ $(LDFLAGS) demo.o ../libtraceuser.a -lrt -o demo
+traced_so: traced_so.o
+	$(CCWRAP) g++ -fPIC -shared traced_so.o -o libtraced.so
+demo: demo.o traced_so
+	$(CCWRAP) g++ $(LDFLAGS) demo.o ../libtraceuser.a -lrt -L. -ltraced -o demo
 
 clean:
 	rm demo.o demo
