Support traced executables containing traced shared objects

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -8,8 +8,16 @@ LD=$(LDWRAP) ld
 LDFLAGS=-L$(TRACES_ROOT_DIR)
 all: demo
 
-demo: demo.o
-	$(CCWRAP) g++ $(LDFLAGS) demo.o ../libtraceuser.a -lrt -L. -o demo
+demo: demo.o shared-demo-1 shared-demo-2
+	$(CCWRAP) g++ $(LDFLAGS) demo.o ../libtraceuser.a -lrt -L. -lshared-demo-1 -lshared-demo-2 -o demo
+
+shared-demo-1.o: CXXFLAGS=-I ../include -fPIC 
+shared-demo-2.o: CXXFLAGS=-I ../include -fPIC
+shared-demo-1: shared-demo-1.o
+	$(CCWRAP) g++ $(LDFLAGS) -fPIC -shared shared-demo-1.o ../libtraceuser.a -lrt -o libshared-demo-1.so
+
+shared-demo-2: shared-demo-2.o
+	$(CCWRAP) g++ $(LDFLAGS) -fPIC -shared shared-demo-2.o ../libtraceuser.a -lrt -o libshared-demo-2.so
 
 clean:
-	rm demo.o demo
+	rm -f *.so *.o demo
